<resources>
    <string name="app_name">Crossover-Assignment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Jitensha Rent</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_field_required_16">This field is required and must be 16 digits</string>
    <string name="error_field_required_3">This field is required and must be 3 digits</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="label">Crossover</string>
    <string name="action_close_session">Close session</string>
    <string name="action_rent">Rent</string>
    <string name="str_rent_bike">Do you wish to rent in this location?</string>
    <string name="prompt_credit_card_number">Credit Card Number</string>
    <string name="prompt_name">Credit Card Owner</string>
    <string name="prompt_expiration_date">Expiration Date</string>
    <string name="prompt_security_code">Security code (Last 3 Digits)</string>
    <string name="prompt_successful">Successful transaction</string>
    <string name="prompt_unsuccessful">Unsuccessful transaction</string>

    <string name="prompt_initial_message">Click the Bicycle button to load all available bicycle in the area</string>
    successful transaction
    <string name="title_activity_main">MainActivity</string>
</resources>
